[package]
name    = "vortex-dfs"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "vortex-dfs"
path = "src/main.rs"

[lib]
name = "vortex_dfs"
path = "src/lib.rs"

[dependencies]
actix-web  = "4"
regex      = "1"
once_cell  = "1"
uuid       = { version = "1", features = ["v4"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm    = "0.10"
rand       = "0.8"
unicode-normalization = "0.1"
hmac       = "0.12"
sha2       = "0.10"
hex        = "0.4"
base64     = "0.21"
reqwest    = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio      = { version = "1", features = ["full"] }
env_logger = "0.10"
log        = "0.4"
num_cpus   = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
